--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,9 @@
 
 <h1>SPRING PRACTICE GIULIANO</h1>
 <hr>
-<h2><a href="covid-tracker">take me to the covid tracker</a></h2>
+<h2><a href="covid-tracker">Take me to the covid tracker</a></h2>
 
-<h2><a href="world-cup">quiero ver los world cup papa!</a></h2>
+<h2><a href="world-cup">Take me to world cups</a></h2>
 
 </body>
 </html>
